@@ -37,6 +37,80 @@ class CronError(Exception):
   def __str__(self):
     return repr(self.value)
 
+
+class rawCrontabLine:
+  """Represents a raw, unparsed line in the crontab"""
+  __rawtext = ''
+  
+  def __init__(self, line):
+    """Initialize the raw representation of the line"""
+    self.__rawtext = line
+  
+  def is_comment_or_whitespace(self):
+    """Returns True if the crontab entry is a comment"""
+    entry_text = self.get_raw_entry_text()
+    if not entry_text or entry_text.lstrip().startswith("#"):
+      return True
+    return False
+  
+  def get_raw_entry_text(self):
+    """Return the raw text for the entry"""
+    return self.__rawtext
+  
+class crontabLine(rawCrontabLine):
+  """Parses an entry in the crontab"""
+  # Initialize some variables to their default values
+  __minute = None
+  __hour = None
+  __dayofmonth = None
+  __month = None
+  __dayofweek = None
+  __command = None
+  __end_comment = ''
+  
+  def __init__(self, minute, hour, dayofmonth, month, dayofweek, command, end_comment=''):
+    """Parses the crontab entry line constructs the object"""
+    self.set_all_fields(minute, hour, dayofmonth, month, dayofweek, command, end_comment)
+    rawCrontabLine.__init__(self, self.get_raw_entry_text())
+  
+  def is_parsable(self):
+    """Returns True if the crontab entry is parsable (comments count as parsable)"""
+    if not self.is_comment_or_whitespace() \
+       and None in [self.__minute, self.__hour, self.__dayofmonth,
+                    self.__month, self.__dayofweek, self.__command]:
+      return False
+    # Basic sanity check on time fields for invalid (ie non-numeric) values
+    for field in [self.__minute, self.__hour, self.__dayofmonth, self.__month, self.__dayofweek]:
+      if re.compile("^[0-9/\-,*]*$").search(field) == None:
+        return False
+    return True
+  
+  def get_all_fields(self):
+    """Returns the fields for the crontab entry if the line was parsable.
+    Otherwise, returns None."""
+    if not self.is_parsable():
+      raise ValueError("Entry is not parsable")
+    return (self.__minute, self.__hour, self.__dayofmonth, self.__month, self.__dayofweek, self.__command, self.__end_comment)
+  
+  def set_all_fields(self, minute, hour, dayofmonth, month, dayofweek, command, end_comment=''):
+    """Sets all fields in the crontab line"""
+    self.__minute, self.__hour, self.__dayofmonth, self.__month, \
+    self.__dayofweek, self.__command, self.__end_comment = minute, hour, \
+      dayofmonth, month, dayofweek, command, end_comment or ''
+    self.__rawtext = self.generate_entry_text()
+  
+  def validate(self):
+    """If the entry was not parsable, a ValueError is raised."""
+    if not self.is_parsable() and not self.is_comment_or_whitespace():
+      raise ValueError("Entry is not parsable - cannot generate entry text")
+  
+  def generate_entry_text(self):
+    """Return the generated text for the entry."""
+    fields = [self.__minute, self.__hour, self.__dayofmonth, self.__month,
+              self.__dayofweek, self.__command, self.__end_comment]
+    # If we're here then all fields were validated
+    return ' '.join(fields).rstrip()+'\n'
+
 def escape(string, noQuotes):
   """Escapes quotes in string"""
   if noQuotes == 1:
@@ -47,190 +121,123 @@ def escape(string, noQuotes):
     return ('\\%s' % splitString).join(string.split(splitString))
   else:
     raise ValueError('noQuotes must be and integer of 1 or 2')
-  
-
-class CronLine:
-  """A single crontab line"""
-  def __init__(self, line):
-    """Initialize. @param line can be either list or string."""
-    if type(line) == types.ListType:
-      split = line
-    else:
-      split = line.split(' ')
-    try:
-      if line == '':
-        self.isNewline = True
-        self.isComment = False
-      elif split[0].startswith('#'):
-        self.isComment = True
-        self.isNewline = False
-        self.comment = line
-      else:
-        self.isComment = False
-        self.isNewline = False
-        self.minute = split[0]
-        self.hour = split[1]
-        self.dayOfMonth = split[2]
-        self.month = split[3]
-        self.dayOfWeek = split[4]
-        self.command = ' '.join(split[5:]) + '\n'
-    except Exception, error:
-      print _('Error while assigning CronLine variables! line:\n`%s\'') % line
-      print _('Error: \n%s') % error
-      self.isComment = True
-      self.isNewline = False
-      self.comment = line
-
-  def validate(self):
-    """Validate the crontab entry"""
-    for i in [self.minute, self.hour, self.dayOfMonth, self.month, self.dayOfWeek]:
-      if re.compile("^[0-9/\-,*]*$").search(i) == None:
-        index = [self.minute, self.hour, self.dayOfMonth, self.month, self.dayOfWeek].index(i) + 1
-        return CronError('Invalid character found in field %i' % index)
-
-  def getEntry(self):
-    """Returns the crontab entry as a string"""
-    if self.isComment:
-      return self.comment + '\n'
-    elif self.isNewline:
-      return '\n'
-    else:
-      self.validate()
-      return '%s %s %s %s %s %s' % (self.minute, self.hour, self.dayOfMonth, self.month, self.dayOfWeek, self.command)
 
 def getPyCrontab():
+  """Read the PyCron crontab file on Windows"""
   prefConf = config.PrefsConf()
   pycronLoc = prefConf.get('Preferences', 'pycronLoc')
-  if os.path.exists('%s/pycron.cfg' % pycronLoc):
-    pycronConf = config.ConfigFile('%s/pycron.cfg' % pycronLoc)
-  elif os.path.exists('%s/pycron.cfg.sample' % pycronLoc):
-    pycronConf = config.ConfigFile('%s/pycron.cfg.sample' % pycronLoc)
-  else: # no cron found!
-    raise CronError(_('Could not locate the pycron or the sample pycron ' + \
-                    'configuration in %s' % pycronLoc))
-  crontabName = pycronConf.get('pycron', 'crontab_filename')
-  if not os.path.exists('%s\\%s' % (pycronLoc, crontabName)):
+  # See if the configuration file exists
+  pycronConfig = os.path.join(pycronLoc, 'pycron.cfg')
+  if os.path.exists(pycronConfig):
+    pycronConf = config.ConfigFile(pycronConfig)
+  # If not, does the sample configuation exist?
+  elif os.path.exists('%s.sample' % pycronConfig):
+    pycronConf = config.ConfigFile('%s.sample' % pycronConfig)
+  # No cron file found!
+  else:
+    raise CronError(_("Could not locate the pycron or the sample pycron configuration in %s" % pycronLoc))
+  # Read in the configuration file we found
+  pycrontab = os.path.join(pycronLoc, pycronConf.get('pycron', 'crontab_filename'))
+  if not os.path.exists(pycrontab):
     try:
-      fh = open('%s\\%s' % (pycronLoc, crontabName), 'w')
+      fh = open(pycrontab, 'w')
       fh.write('# PyCron crontab file\n')
       fh.close()
     except:
-      raise CronError(_('Could not locate the pycron or the sample pycron ' + \
-                      'crontab file in %s' % pycronLoc))
-  return '%s\\%s' % (pycronLoc, crontabName)
+      raise CronError(_("Could not locate the pycron or the sample pycron crontab file in %s" % pycronLoc))
+  return pycrontab
 
-class CronTab:
-  """The class for in iterfacing with the crontab"""
-  def __init__(self):
-    """Initialize it all"""
-    if LINUX:
-      self.environ = {'EDITOR': 'python %s/cronwriter.py' % INSTALL_DIR,
-                      'VISUAL': 'python %s/cronwriter.py' % INSTALL_DIR}
-    elif DARWIN:
-      self.environ = {'EDITOR': '/fwbackups-cronwriter.py',
-                      'VISUAL': '/fwbackups-cronwriter.py'}
-    else:
-      self.environ = {}
+def read():
+  """Read in crontab entires from a crontab-formatted file. Returns a list of
+  rawCrontabLine objects, one for each line."""
+  if MSWINDOWS:
+    # Read from pycron's crontab file
+    crontabLoc = getPyCrontab()
+    fh = open(crontabLoc, 'r')
+  else:
+    # Read from the user's crontab
+    sub = executeSub(['crontab', '-l'])
+    retval = sub.wait()
+    if retval != os.EX_OK and retval != 1:
+      raise CronError('stderr:\n%sstdout:\n%s' % (sub.stderr.readlines(), sub.stdout.readlines()))
+    fh = sub.stdout
+  # Parse the lines
+  lines = [rawCrontabLine(line) for line in fh.readlines()]
+  if MSWINDOWS:
+    fh.close()
+  return lines
 
-  def read(self):
-    """Read the crontab"""
+def write(crontabEntries=[]):
+  """Write a crontab-formatted file from the list of fstabLines. Return values
+  of 0 or 1 to indicate a failure writing to the crontab or a success
+  respectively."""
+  if LINUX:
+    environ = {'EDITOR': 'python %s/cronwriter.py' % INSTALL_DIR,
+               'VISUAL': 'python %s/cronwriter.py' % INSTALL_DIR}
+  elif DARWIN:
+    environ = {'EDITOR': '/fwbackups-cronwriter.py',
+               'VISUAL': '/fwbackups-cronwriter.py'}
+  else:
+    environ = {}
+  remove()
+  try:
     if MSWINDOWS:
-      crontabLoc = getPyCrontab()
-      fh = open(crontabLoc, 'r')
-      toRead = fh
-    else:
-      sub = executeSub(['crontab', '-l'], self.environ)
-      retval = sub.wait()
-      if retval != os.EX_OK and retval != 1:
-        raise CronError('stderr:\n%sstdout:\n%s' % (sub.stderr.readlines(), sub.stdout.readlines()))
-      toRead = sub.stdout
-    # -- #
-    lines = []
-    for i in toRead.readlines():
-      lines.append(CronLine(i.strip('\n')))
-    if MSWINDOWS: # close up
-      fh.close()
-    return lines
-
-  def clean(self):
-    """Rids all fwbackups entries from a user's crontab"""
-    lines = self.read()
-    if MSWINDOWS:
-      crontabLoc = getPyCrontab()
-      fh = open(crontabLoc, 'w')
-      fh.write('')
-      fh.close()
-    else:
-      sub = executeSub(['crontab', '-r'], self.environ)
-    writeBack = []
-    for i in lines:
-      if i.isComment or i.isNewline:
-        writeBack.append(i.getEntry())
-        continue
-      elif re.compile(".*fwbackups.*").search(i.command) == None:
-        writeBack.append(i.getEntry())
-    #print 'write', writeBack
-    self.write(''.join(writeBack))
-
-  def write(self, content):
-    """Overwrite the crontab with @param content"""
-    if MSWINDOWS:
-      crontabLoc = getPyCrontab()
-      fh = open(crontabLoc, 'w')
-      fh.write(content)
-      fh.close()
+      crontab = getPyCrontab()
+      fh = open(crontab, 'w')
     else:
       if DARWIN:
         if os.path.islink('/fwbackups-cronwriter.py'):
           os.remove('/fwbackups-cronwriter.py')
         os.symlink(os.path.join(INSTALL_DIR, 'cronwriter.py'), '/fwbackups-cronwriter.py')
-      sub = executeSub(['crontab', '-e'], self.environ)
-      sub.stdin.write(content)
-      time.sleep(1)
-      sub.stdin.close()
+      sub = executeSub(['crontab', '-e'], environ)
+      fh = sub.stdin
+    # Write the content to the crontab
+    for crontabEntry in crontabEntries:
+      if isinstance(crontabEntry, crontabLine): # generate the entry text
+        fh.write(crontabEntry.generate_entry_text())
+      else:
+        fh.write(crontabEntry.get_raw_entry_text())
+    time.sleep(1)
+    fh.close()
+    if not MSWINDOWS:
       retval = sub.wait()
       if DARWIN:
         os.remove('/fwbackups-cronwriter.py')
       if retval != os.EX_OK:
         stdout = ' '.join(sub.stdout.readlines())
         stderr = ' '.join(sub.stderr.readlines())
-        raise CronError(_('Could not write line `%(a)s\' to crontab:\n%(b)s%(c)s') % {'a': content, 'b': stdout, 'c': stderr})
+        raise CronError(_('Could not write new crontab:\n%(a)s%(b)s') % {'a': stdout, 'b': stderr})
+    fh.close()
+  except IOError: # can't open crontab file
+    return 0
+  return 1
 
-  def search(self, line):
-    """Search for an entry"""
-    entry = line.getEntry()
-    lines = self.read()
-    for i in lines:
-      if i.getEntry() == entry:
-        return True
-    return False
+def remove():
+  """Removes/empties a user's crontab"""
+  if MSWINDOWS:
+    crontab = getPyCrontab()
+    fh = open(crontab, 'w')
+    fh.write('')
+    fh.close()
+  else:
+    sub, stdout, stderrrr = execute(['crontab', '-r'])
 
-  def add(self, line):
-    """Add a crontab entry"""
-    lines = self.read()
-    lines.append(line)
-    contents = ''
-    for i in lines:
-      contents += i.getEntry()
-    self.write(contents)
-
-  def edit(self, oldline, newline):
-    """Edit a crontab entry"""
-    if not self.remove(oldline):
-      raise CronError(_('No matches found for \'%s\'.') % oldline)
-    self.add(newline)
-
-  def remove(self, line):
-    """Remove a crontab entry"""
-    entry = line.getEntry()
-    lines = self.read()
-    for i in lines: # for each line
-      if i.getEntry().strip('\n') == entry: # if we have a match
-        lines.remove(i)
-        contents = []
-        for ii in lines:
-          contents.append(ii.getEntry())
-        self.write(''.join(contents))
-        return True
-    return False
-
+def clean_fwbackups_entries():
+  """Reads the crontab and removes any fwbackups entries. Returns the cleaned
+  lines as crontabLine objects. Does not write any changes to the crontab."""
+  # Read the existing crontab
+  crontabLines = read()
+  # Parse each line and skip any fwbackup-related ones
+  cleanedLines = []
+  for line in crontabLines:
+    if line.is_comment_or_whitespace():
+      # Never clean out comments or whitespace
+      cleanedLines.append(line)
+    else:
+      # if not comment or whitespace, check if the entry is not fwbackups related
+      if re.compile("^(.*)(fwbackups-run)(.*)$").search(line.get_raw_entry_text()) == None:
+        cleanedLines.append(line)
+  for line in cleanedLines:
+    print [line.get_raw_entry_text()]
+  return cleanedLines
+    
